[tool.poetry]
name = "plin_monitor"
version = "0.1.0"
description = "Decode LIN frames on peak lin"
authors = ["Daniel Trnka <daniel.trnka@gmail.com>"]
#readme = "README.md"
packages = [{include = "plin_monitor.py"}]

[tool.poetry.dependencies]
python = "^3.8"
ldfparser = "^0.25.0"
plin-linux = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plin_monitor = "plin_monitor:main"
